--- a/RubiApp/TabBar.storyboard
+++ b/RubiApp/TabBar.storyboard
@@ -18,6 +18,7 @@
                     </tabBar>
                     <connections>
                         <segue destination="o51-9z-Dza" kind="relationship" relationship="viewControllers" id="5Fy-ZF-8wo"/>
+                        <segue destination="XlP-kd-TMx" kind="relationship" relationship="viewControllers" id="X9N-jz-DUC"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZIq-aS-nHG" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -33,6 +34,16 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZMQ-xx-qri" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-88" y="-145"/>
+        </scene>
+        <!--Saved-->
+        <scene sceneID="v5y-Nm-5sG">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Saved" id="XlP-kd-TMx" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="bkr-z6-Sg8"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="M2M-1e-rqf" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-94" y="-90"/>
         </scene>
     </scenes>
 </document>
