--- a/RubiApp/Home.storyboard
+++ b/RubiApp/Home.storyboard
@@ -55,28 +55,18 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="66D-AS-tIE">
                                 <rect key="frame" x="20" y="235" width="374" height="182"/>
                                 <subviews>
-                                    <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="WvL-EP-m0N" customClass="MainTextViewStyle" customModule="RubiApp" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.0" width="374" height="96"/>
-                                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" secondItem="WvL-EP-m0N" secondAttribute="height" multiplier="187:48" id="gRc-ed-9zE"/>
-                                        </constraints>
-                                        <color key="textColor" systemColor="labelColor" cocoaTouchSystemColor="darkTextColor"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                        <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                    </textView>
-                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="40" translatesAutoresizingMaskIntoConstraints="NO" id="snw-cO-gnV">
-                                        <rect key="frame" x="0.0" y="96" width="374" height="77"/>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="107" translatesAutoresizingMaskIntoConstraints="NO" id="snw-cO-gnV">
+                                        <rect key="frame" x="0.0" y="86.5" width="374" height="77"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="Hgb-RU-g18">
-                                                <rect key="frame" x="0.0" y="0.0" width="98" height="77"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="53.5" height="77"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w0G-V5-NFJ">
-                                                        <rect key="frame" x="0.0" y="0.0" width="98" height="49.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="53.5" height="49.5"/>
                                                         <state key="normal" image="Paste"/>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ペースト" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dkM-ra-iDN" customClass="SubLabelStyle" customModule="RubiApp" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="57.5" width="98" height="19.5"/>
+                                                        <rect key="frame" x="0.0" y="57.5" width="53.5" height="19.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="19.5" id="Sri-cE-OLh"/>
                                                         </constraints>
@@ -87,14 +77,14 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="7" translatesAutoresizingMaskIntoConstraints="NO" id="Fc6-VT-aSH">
-                                                <rect key="frame" x="138" y="0.0" width="98" height="77"/>
+                                                <rect key="frame" x="160.5" y="0.0" width="53" height="77"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="KN7-Vn-lbB">
-                                                        <rect key="frame" x="0.0" y="0.0" width="98" height="54"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="53" height="54"/>
                                                         <state key="normal" image="Copy"/>
                                                     </button>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="コピー" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tjQ-IC-WRz" customClass="SubLabelStyle" customModule="RubiApp" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="61" width="98" height="16"/>
+                                                        <rect key="frame" x="0.0" y="61" width="53" height="16"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="13"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -102,14 +92,14 @@
                                                 </subviews>
                                             </stackView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="VDb-xu-2QW">
-                                                <rect key="frame" x="276" y="0.0" width="98" height="77"/>
+                                                <rect key="frame" x="320.5" y="0.0" width="53.5" height="77"/>
                                                 <subviews>
                                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tTH-kN-KHi">
-                                                        <rect key="frame" x="0.0" y="0.0" width="98" height="49.5"/>
-                                                        <state key="normal" image="Transfer"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="53.5" height="49.5"/>
+                                                        <state key="normal" image="internet"/>
                                                     </button>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="共有" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6O-UP-TXc" customClass="SubLabelStyle" customModule="RubiApp" customModuleProvider="target">
-                                                        <rect key="frame" x="0.0" y="57.5" width="98" height="19.5"/>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="調べる" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="C6O-UP-TXc" customClass="SubLabelStyle" customModule="RubiApp" customModuleProvider="target">
+                                                        <rect key="frame" x="0.0" y="57.5" width="53.5" height="19.5"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="19.5" id="KNx-Av-j06"/>
                                                         </constraints>
@@ -121,19 +111,27 @@
                                             </stackView>
                                         </subviews>
                                         <constraints>
-                                            <constraint firstAttribute="width" secondItem="snw-cO-gnV" secondAttribute="height" multiplier="373:77" id="gkX-wP-Xbb"/>
+                                            <constraint firstAttribute="width" secondItem="snw-cO-gnV" secondAttribute="height" multiplier="34:7" id="GG3-wo-RBE"/>
                                         </constraints>
                                     </stackView>
+                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="BR9-K5-rfV" customClass="MainTextFieldStyle" customModule="RubiApp" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="374" height="86.5"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="BR9-K5-rfV" secondAttribute="height" multiplier="95:22" id="IRG-nN-ctI"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                 <constraints>
-                                    <constraint firstItem="WvL-EP-m0N" firstAttribute="leading" secondItem="66D-AS-tIE" secondAttribute="leading" id="DPS-aC-HUm"/>
-                                    <constraint firstItem="snw-cO-gnV" firstAttribute="leading" secondItem="66D-AS-tIE" secondAttribute="leading" id="F0r-AF-b8A"/>
-                                    <constraint firstAttribute="trailing" secondItem="snw-cO-gnV" secondAttribute="trailing" id="TIP-Gw-acc"/>
-                                    <constraint firstItem="WvL-EP-m0N" firstAttribute="top" secondItem="66D-AS-tIE" secondAttribute="top" id="Uhd-Mh-jD9"/>
+                                    <constraint firstItem="BR9-K5-rfV" firstAttribute="leading" secondItem="66D-AS-tIE" secondAttribute="leading" id="Jhs-un-R5C"/>
+                                    <constraint firstItem="snw-cO-gnV" firstAttribute="leading" secondItem="66D-AS-tIE" secondAttribute="leading" id="PZJ-b1-inr"/>
+                                    <constraint firstItem="snw-cO-gnV" firstAttribute="top" secondItem="BR9-K5-rfV" secondAttribute="bottom" id="VdI-QA-Hoh"/>
                                     <constraint firstAttribute="width" secondItem="66D-AS-tIE" secondAttribute="height" multiplier="187:91" id="Vv9-sw-AKe"/>
-                                    <constraint firstAttribute="trailing" secondItem="WvL-EP-m0N" secondAttribute="trailing" id="cBy-gj-AVw"/>
-                                    <constraint firstItem="snw-cO-gnV" firstAttribute="top" secondItem="WvL-EP-m0N" secondAttribute="bottom" id="rDU-0z-J89"/>
+                                    <constraint firstAttribute="trailing" secondItem="snw-cO-gnV" secondAttribute="trailing" id="ehH-nr-qfo"/>
+                                    <constraint firstItem="BR9-K5-rfV" firstAttribute="top" secondItem="66D-AS-tIE" secondAttribute="top" id="ozD-NC-OLx"/>
+                                    <constraint firstAttribute="trailing" secondItem="BR9-K5-rfV" secondAttribute="trailing" id="reM-52-ehM"/>
                                 </constraints>
                             </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lhg-Js-RMQ">
@@ -160,8 +158,8 @@
                                     <constraint firstAttribute="width" constant="20" id="Jky-OO-vKQ"/>
                                 </constraints>
                             </activityIndicatorView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmr-ca-gWL" customClass="SubLabelStyle" customModule="RubiApp" customModuleProvider="target">
-                                <rect key="frame" x="150" y="432" width="114" height="20.5"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fmr-ca-gWL" customClass="SubLabelStyle" customModule="RubiApp" customModuleProvider="target">
+                                <rect key="frame" x="20" y="432" width="374" height="0.0"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -173,12 +171,12 @@
                             <constraint firstItem="QVQ-mx-bMH" firstAttribute="centerX" secondItem="YVC-WY-wOH" secondAttribute="centerX" id="7HU-yS-K2j"/>
                             <constraint firstItem="fmr-ca-gWL" firstAttribute="top" secondItem="66D-AS-tIE" secondAttribute="bottom" constant="15" id="8TZ-Ma-LYk"/>
                             <constraint firstItem="4rI-Qe-3BJ" firstAttribute="top" secondItem="2Yc-xp-RGc" secondAttribute="top" constant="20" id="8nC-YZ-ss9"/>
-                            <constraint firstItem="2Yc-xp-RGc" firstAttribute="trailing" secondItem="fmr-ca-gWL" secondAttribute="trailing" constant="150" id="Jgi-cq-Neb"/>
+                            <constraint firstItem="2Yc-xp-RGc" firstAttribute="trailing" secondItem="fmr-ca-gWL" secondAttribute="trailing" constant="20" id="Jgi-cq-Neb"/>
                             <constraint firstItem="66D-AS-tIE" firstAttribute="top" secondItem="4rI-Qe-3BJ" secondAttribute="bottom" constant="15" id="MgL-QS-Ygi"/>
                             <constraint firstItem="2Yc-xp-RGc" firstAttribute="trailing" secondItem="66D-AS-tIE" secondAttribute="trailing" constant="20" id="T8u-bL-R0u"/>
                             <constraint firstItem="QVQ-mx-bMH" firstAttribute="top" secondItem="66D-AS-tIE" secondAttribute="bottom" constant="20" id="UnV-pT-dxN"/>
                             <constraint firstItem="lhg-Js-RMQ" firstAttribute="leading" secondItem="2Yc-xp-RGc" secondAttribute="leading" constant="20" id="i7i-SE-04C"/>
-                            <constraint firstItem="fmr-ca-gWL" firstAttribute="leading" secondItem="2Yc-xp-RGc" secondAttribute="leading" constant="150" id="mUu-LP-kyT"/>
+                            <constraint firstItem="fmr-ca-gWL" firstAttribute="leading" secondItem="2Yc-xp-RGc" secondAttribute="leading" constant="20" id="mUu-LP-kyT"/>
                             <constraint firstItem="2Yc-xp-RGc" firstAttribute="trailing" secondItem="4rI-Qe-3BJ" secondAttribute="trailing" constant="20" id="o68-S8-Lbc"/>
                             <constraint firstItem="2Yc-xp-RGc" firstAttribute="trailing" secondItem="lhg-Js-RMQ" secondAttribute="trailing" constant="20" id="oeX-gI-Ac0"/>
                             <constraint firstItem="66D-AS-tIE" firstAttribute="leading" secondItem="2Yc-xp-RGc" secondAttribute="leading" constant="20" id="pEn-zR-1Z5"/>
@@ -195,8 +193,8 @@
                         <outlet property="indicator" destination="QVQ-mx-bMH" id="MlP-ZW-aJk"/>
                         <outlet property="pasteButton" destination="w0G-V5-NFJ" id="Qi1-3n-iLI"/>
                         <outlet property="resultTableView" destination="lhg-Js-RMQ" id="y41-PB-ECU"/>
-                        <outlet property="shareButton" destination="tTH-kN-KHi" id="pG2-Tf-iu1"/>
-                        <outlet property="textView" destination="WvL-EP-m0N" id="OoZ-0R-sMi"/>
+                        <outlet property="searchButton" destination="tTH-kN-KHi" id="p19-aJ-sas"/>
+                        <outlet property="textField" destination="BR9-K5-rfV" id="Qz8-FH-lxJ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="92G-4v-bsy" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -227,6 +225,6 @@
         <image name="Copy" width="50" height="50"/>
         <image name="Home" width="24" height="24"/>
         <image name="Paste" width="50" height="50"/>
-        <image name="Transfer" width="50" height="50"/>
+        <image name="internet" width="50" height="50"/>
     </resources>
 </document>
