--- a/RubiApp/Home.storyboard
+++ b/RubiApp/Home.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--ホーム-->
+        <!--Rubi翻訳-->
         <scene sceneID="6Wd-gy-jOl">
             <objects>
                 <viewController id="YUD-Ow-adr" customClass="HomeViewController" customModule="RubiApp" customModuleProvider="target" sceneMemberID="viewController">
@@ -134,18 +134,18 @@
                                     <constraint firstAttribute="trailing" secondItem="BR9-K5-rfV" secondAttribute="trailing" id="reM-52-ehM"/>
                                 </constraints>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lhg-Js-RMQ">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="90" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="lhg-Js-RMQ">
                                 <rect key="frame" x="20" y="472" width="374" height="341"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="lhg-Js-RMQ" secondAttribute="height" multiplier="374:335" constant="-6.6985074626865639" id="d6T-4C-SHo"/>
                                 </constraints>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="100" id="PD8-wv-lUZ">
-                                        <rect key="frame" x="0.0" y="28" width="374" height="100"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="90" id="PD8-wv-lUZ">
+                                        <rect key="frame" x="0.0" y="28" width="374" height="90"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="PD8-wv-lUZ" id="cgp-p7-ahA">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="100"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="374" height="90"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -185,7 +185,7 @@
                         <viewLayoutGuide key="safeArea" id="2Yc-xp-RGc"/>
                     </view>
                     <tabBarItem key="tabBarItem" title="ホーム" image="Home" id="otJ-AH-IHH"/>
-                    <navigationItem key="navigationItem" id="4Ee-0C-cJM"/>
+                    <navigationItem key="navigationItem" title="Rubi翻訳" id="4Ee-0C-cJM"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="changedTextLabel" destination="fmr-ca-gWL" id="7cs-Lb-DaR"/>
