--- a/RubiApp/View/ResultTableViewCell.xib
+++ b/RubiApp/View/ResultTableViewCell.xib
@@ -18,15 +18,15 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="かんじ" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ipc-l4-EE7" customClass="SubLabelStyle" customModule="RubiApp" customModuleProvider="target">
-                        <rect key="frame" x="18" y="15" width="338" height="15"/>
+                        <rect key="frame" x="15" y="15" width="341" height="15"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="Ipc-l4-EE7" secondAttribute="height" multiplier="113:5" id="xXO-fH-NJ9"/>
+                            <constraint firstAttribute="width" secondItem="Ipc-l4-EE7" secondAttribute="height" multiplier="113:5" constant="2" id="xXO-fH-NJ9"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="漢字" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HOx-zw-Mgg" customClass="MainLabelStyle" customModule="RubiApp" customModuleProvider="target">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="漢字" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HOx-zw-Mgg" customClass="MainLabelStyle" customModule="RubiApp" customModuleProvider="target">
                         <rect key="frame" x="15" y="35" width="291" height="30"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="30" id="Z6M-Ip-hOw"/>
@@ -45,14 +45,14 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="Xgj-jO-MAc" firstAttribute="leading" secondItem="HOx-zw-Mgg" secondAttribute="trailing" constant="18" id="ELT-xR-IoJ"/>
+                    <constraint firstItem="Xgj-jO-MAc" firstAttribute="leading" secondItem="HOx-zw-Mgg" secondAttribute="trailing" constant="8" id="ELT-xR-IoJ"/>
                     <constraint firstAttribute="trailing" secondItem="Ipc-l4-EE7" secondAttribute="trailing" constant="18" id="JZ4-7i-rX4"/>
                     <constraint firstAttribute="trailing" secondItem="Xgj-jO-MAc" secondAttribute="trailing" constant="20" id="LDW-HZ-Prb"/>
                     <constraint firstItem="Ipc-l4-EE7" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="Po7-am-HN5"/>
                     <constraint firstItem="HOx-zw-Mgg" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="RFq-Sz-b5p"/>
                     <constraint firstItem="Xgj-jO-MAc" firstAttribute="top" secondItem="Ipc-l4-EE7" secondAttribute="bottom" id="cgD-4p-aHi"/>
                     <constraint firstItem="HOx-zw-Mgg" firstAttribute="top" secondItem="Ipc-l4-EE7" secondAttribute="bottom" constant="5" id="orO-Th-A3o"/>
-                    <constraint firstItem="Ipc-l4-EE7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="18" id="yqF-Rw-wZb"/>
+                    <constraint firstItem="Ipc-l4-EE7" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="15" id="yqF-Rw-wZb"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
